--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         
         <div class="col-lg-6 ">
           <div class="about-list">
-            <p id="p1" data-aos="fade-left">WE ARE DEDICATED TO TRANSFORMING OUR CUSTOMERS' BUSINESSES THROUGH CUTTING-EDGE TECHNOLOGICAL
+            <p id="p1" data-aos="fade-left" style="color:gray">WE ARE DEDICATED TO TRANSFORMING OUR CUSTOMERS' BUSINESSES THROUGH CUTTING-EDGE TECHNOLOGICAL
               SOLUTIONS</p> </div>
         </div>
       </div>
