--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         </div>
         <div class="row">
           <!-- SalesForce -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#SalesForce" onclick="setCondition('SalesForce')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -531,7 +531,7 @@
             </a>
           </div>
           <!-- Java -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#Java" onclick="setCondition('Java')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -550,7 +550,7 @@
             </a>
           </div>
           <!-- Azure -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#Azure" onclick="setCondition('Azure')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -570,7 +570,7 @@
             </a>
           </div>
           <!-- DevOps -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#DevOps" onclick="setCondition('DevOps')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -590,7 +590,7 @@
             </a>
           </div>
           <!-- AWS -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#aws-services" onclick="setCondition('aws-services')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -610,7 +610,7 @@
             </a>
           </div>
           <!-- Artificial Intelligence (AI)  -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#AI" onclick="setCondition('AI')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -629,7 +629,7 @@
             </a>
           </div>
           <!-- Cybersecurity -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#cybersecurity" onclick="setCondition('cybersecurity')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
@@ -647,7 +647,7 @@
             </a>
           </div>
           <!-- blockchain -->
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in-down">
+          <div class="col-xl-3 col-md-6 main-card" data-aos="zoom-in-down">
             <a href="#blockchain" onclick="setCondition('blockchain')" class="flip-card-link">
               <div class="flip-card">
                 <div class="flip-card-inner">
